# cloudx-ms-devops-associate-playground

./: .gitignore
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  test.db
backend/app/: crud.py  database.py  gunicorn.py  main.py  models.py  schemas.py
frontend/: app.js  index.html  index.js  package-lock.json  package.json
frontend/routes/: index.js
frontend/views/: index.ejs
infra/: .terraform.lock.hcl  backend.tf  database.tf  frontend.tf  main.tf  provider.tf  resource_groups.tf  traffic_manager.tf  variables.tf  vault.tf
